margin on mobile fix?

--- a/client/src/pages/About/style.css
+++ b/client/src/pages/About/style.css
@@ -8,7 +8,7 @@
     height:75vh;
 }
 .pink-block {
-    height:75vh;
+    padding-bottom:50px;
     background-color:#FFEEEE;
 }
 
@@ -105,7 +105,7 @@
 
 @media (min-width:400px) and (max-width:667px) {
     .pink-block {
-        height:125vh;
+        /* height:125vh; */
         background-color:#FFEEEE;
     }
     
@@ -131,7 +131,7 @@
 }
 @media (min-width:668px) and (max-width:996px) {
     .pink-block {
-        height:90vh;
+        /* height:90vh; */
         background-color:#FFEEEE;
     }
     .about-greeting {
